--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,15 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 170px;
+    column-gap: 180px;
+    margin-top: 50px;
 }
 .personal-info {
     border-right: 3px rgba(0, 0, 0, 0.541) solid;
+    padding: 0 3% 0 0;
+}
+.professional-info {
+    padding: 3%;
 }
 .photo {
     margin-bottom: 10px;
@@ -27,7 +32,7 @@ body {
 .title {
 font-size: 40px;
 margin-bottom: 17px;
-margin-top: 17PX;
+margin-top: 17px;
 }
 .text, ul li, a {
 font-size: 25px;
