--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 }
 .photo {
     margin-bottom: 10px;
+    margin-top: 17px;
 }
 .name {
     font-size: 45px;
@@ -33,6 +34,9 @@ body {
 font-size: 40px;
 margin-bottom: 17px;
 margin-top: 17px;
+}
+.education {
+    margin-top: 0;
 }
 .text, ul li, a {
 font-size: 25px;
