--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ body {
     margin-top: 17px;
 }
 .name {
-    font-size: 45px;
+    font-size: 40px;
     font-weight: bold;
     margin-bottom: 17px;
 }
 .title {
-font-size: 40px;
+font-size: 35px;
 margin-bottom: 17px;
 margin-top: 17px;
 }
@@ -39,10 +39,21 @@ margin-top: 17px;
     margin-top: 0;
 }
 .text, ul li, a {
-font-size: 25px;
+font-size: 20px;
 line-height: 120%;
 color: black;
 }
 ul li::before {
     content: ' · ';
+}
+.name_block {
+    position: relative;
+}
+.language {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 20px;
+    background-color: rgb(245, 245, 239);
+    border: none;
 }
